fix: colors from drop down menu in filters (it seems i deleted too much yesterday). Were transparent, now once again opaque.

--- a/client/src/styles/transactions.css
+++ b/client/src/styles/transactions.css
@@ -32,6 +32,8 @@
 }
 
 .transactions-table-popup-open .ant-table-wrapper,
+.transactions-table-popup-open .ant-table,
+.transactions-table-popup-open .ant-table-container,
 .transactions-table-popup-open .ant-pagination {
   pointer-events: none;
 }
